updates -> routing, login, logout

--- a/src/components/molecules/Modal/Modal.scss
+++ b/src/components/molecules/Modal/Modal.scss
@@ -8,19 +8,20 @@
   width: 90%;
   max-width: 480px;
   border-radius: 12px;
-  padding: 2rem;
+  padding: 0rem;
   z-index: 200;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
   animation: fadeIn 0.2s ease-out;
 
   &__close {
     position: absolute;
-    top: 12px;
+    top: 8px;
     right: 12px;
     background: none;
     border: none;
-    font-size: 1.4rem;
+    font-size: 1.7rem;
     cursor: pointer;
+    color: white;
   }
 }
 
