added protected routes for favorite

--- a/src/components/molecules/PersonCardSkeleton/PersonCardSkeleton.scss
+++ b/src/components/molecules/PersonCardSkeleton/PersonCardSkeleton.scss
@@ -1,10 +1,10 @@
 .person-card-skeleton {
-  background: #b2641f; // same as PersonCard
+  background: #222; // same as PersonCard
   border-radius: 12px;
   //   border: 3px solid #b2641f;
   overflow: hidden;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  width: 200px;
+  width: 150px;
   max-width: 220px; // same as card
   cursor: pointer;
   outline: none;
