--- a/src/components/atoms/PaginationButton/PaginationButton.scss
+++ b/src/components/atoms/PaginationButton/PaginationButton.scss
@@ -1,14 +1,16 @@
 .btn {
   padding: 0.5rem 1rem;
   font-size: 1rem;
+  font-weight: bold;
   cursor: pointer;
-  border: 1px solid #ccc;
+  border: none;
   border-radius: 4px;
-  background-color: #fff;
+  background-color: #ffcc00;
+  color: #000;
   transition: background-color 0.2s;
 
   &:hover:not(:disabled) {
-    background-color: #eee;
+    background-color: #ffdd33;
   }
 
   &:disabled {
