--- a/src/components/molecules/Header/Header.scss
+++ b/src/components/molecules/Header/Header.scss
@@ -5,6 +5,7 @@
   padding: 1rem 2rem;
   background-color: #222;
   color: #fff;
+  position: relative; // needed for centering middle content
 
   button {
     padding: 0.5rem 1rem;
@@ -19,6 +20,30 @@
     &:hover {
       background-color: #ffdd33;
     }
+  }
+
+  &__title {
+    flex: 1;
+    text-align: left;
+  }
+
+  &__center {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+
+    .welcome-msg {
+      font-weight: bold;
+    }
+  }
+
+  &__right {
+    display: flex;
+    gap: 0.5rem;
   }
 }
 
