--- a/src/components/molecules/PersonalCard/PersonCard.scss
+++ b/src/components/molecules/PersonalCard/PersonCard.scss
@@ -1,14 +1,14 @@
 .person-card {
-  background: #b2641f;
+  background: #222;
   border-radius: 12px;
-  border: 3px solid #b2641f;
+  border: 3px solid #222;
   overflow: hidden;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   transition:
     transform 0.2s,
     box-shadow 0.2s;
-  color: #000000;
+  color: #ffffff;
   outline: none; // remove default outline
 
   &:hover,
