--- a/src/components/molecules/Header/Header.scss
+++ b/src/components/molecules/Header/Header.scss
@@ -60,7 +60,7 @@
   z-index: 1000;
 
   &__content {
-    background-color: #fff;
+    background-color: #222;
     padding: 2rem;
     border-radius: 8px;
     position: relative;
