--- a/src/components/organisms/CharacterDetailsModal/CharacterDetailsModal.scss
+++ b/src/components/organisms/CharacterDetailsModal/CharacterDetailsModal.scss
@@ -30,7 +30,7 @@
 
 /* HEADER BAR */
 .character-modal__header {
-  background: #b2641f;
+  background: #222;
   color: #fff;
   padding: 1rem;
   text-align: center;
