--- a/src/components/molecules/Modal/Modal.scss
+++ b/src/components/molecules/Modal/Modal.scss
@@ -4,7 +4,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background: white;
-  border: 2px solid #b2641f;
+  border: 2px solid #222;
   width: 90%;
   max-width: 480px;
   border-radius: 12px;
